# MajorProject

./: .gitignore  LICENSE  README.md  app.py  commands.txt  installer.py  pyproject.toml  renderer.py  requirements.txt  utils.py
.github/workflows/: testcommands.yml
app/: main.js  package-lock.json  package.json  requirments.txt
app/server/: api.py  main.py  server_config.py
app/server/static/: style.css
classify/: abuse.py
cli/: app.py  classify.py  main.py  realtime.py  renderer.py  utility.py
cli/tests/: test_commands.py
gpt/: __init__.py  api.py  threat.py
installer/: install_cli.py
netscanner/: __init__.py  app.py  utils.py
netscanner/classify/: abuse.py  classify.py
netscanner/ip/: __init__.py  classify.py  external.py  navigator.py  renderer.py  trace.py  utils.py
netscanner/ip/classification/: abuseip_classification.py
netscanner/ip/model/: data.py
netscanner/sniff/: sniff.py
observatory/: app.py  observer.py
observatory/classify/: abuse.py
observatory/sniff/: sniff.py
src/: __init__.py  utils.py
src/ip/: __init__.py  analyzer.py  background.py  history.py  navigator.py  realtime.py  sniff.py  utils.py
src/ip/classification/: abuseip.py  abuseip_classification.py  model.py
src/ip/model/: cache.py  data.py  model.joblib  scaler.joblib
src/sniff/: sniff.py
