[tool.poetry]
name = "netscanner"
version = "0.1.0"
description = "Sniff and classify incoming and outgoing network packets."
authors = ["Aradhya Tripathi <67282231+Aradhya-Tripathi@users.noreply.github.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
certifi = "2022.12.7"
charset-normalizer = "3.1.0"
click = "8.1.3"
idna = "3.4"
markdown-it-py = "2.2.0"
mdurl = "0.1.2"
pygments = "2.14.0"
requests = "2.28.2"
rich = "13.3.2"
scapy = "2.5.0"
typer = "0.7.0"
urllib3 = "1.26.15"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[tool.poetry.scripts]
netscanner = 'netscanner.app:app'