[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "netscanner"
authors = [{name = "Aradhya Tripathi", email = "aradhyatripathi51@gmail.com"}]
readme = "README.md"
license = {file = "LICENSE"}
classifiers = ["License :: OSI Approved :: MIT License"]
dynamic = ["version", "description"]

[project.urls]
Home = "https://github.com/Aradhya-Tripathi/MajorProject"

[project.scripts]
netscanner = 'netscanner.app:app'