[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "netscanner"
authors = [{name = "Aradhya Tripathi", email = "aradhyatripathi51@gmail.com"}]
readme = "README.md"
license = {file = "LICENSE"}
classifiers = ["License :: OSI Approved :: MIT License"]
requires-python = ">=3.10"
dependencies = [
    "black==23.3.0",
    "certifi==2022.12.7",
    "charset-normalizer==3.1.0",
    "click==8.1.3",
    "dnspython==2.3.0",
    "idna==3.4",
    "markdown-it-py==2.2.0",
    "mdurl==0.1.2",
    "mypy-extensions==1.0.0",
    "packaging==23.0",
    "pathspec==0.11.1",
    "platformdirs==3.2.0",
    "Pygments==2.14.0",
    "pymongo==4.3.3",
    "requests==2.28.2",
    "rich==13.3.3",
    "scapy==2.5.0",
    "toml==0.10.2",
    "typer==0.7.0",
    "urllib3==1.26.15"
]

dynamic = ["version"]

[tool.hatch.version]
path = "cli/__init__.py"

[project.urls]
Home = "https://github.com/Aradhya-Tripathi/MajorProject"

[project.scripts]
netscanner = 'cli.app:app'